src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap");

:root {
  --color-bg: #fff;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Thin.woff")
    format("woff");
  font-weight: 100;
  font-style: normal;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-ExtraLight.woff")
    format("woff");
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Light.woff")
    format("woff");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Regular.woff")
    format("woff");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Medium.woff")
    format("woff");
  font-weight: 500;
  font-style: normal;
}

/* @font-face {
  font-family: "Pretendard";
  src: url("./fonts/Pretendard-SemiBold.woff") format("woff");
  font-weight: 600;
  font-style: normal;
} */

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Bold.woff")
    format("woff");
  font-weight: 700;
  font-style: normal;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Black.woff")
    format("woff");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "Pretendard";
  src: url("https://cdn.jsdelivr.net/gh/webfontworld/pretendard/Pretendard-Black.woff")
    format("woff");
  font-weight: 900;
  font-style: normal;
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Pretendard";
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
  font-family: "Pretendard";
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  /* padding: 24px;
  max-width: 800px; */
  margin: 0 auto;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

button {
  border: 0 none;
  background-color: transparent;
}

textarea,
button {
  -webkit-appearance: none;
  -webkit-border-radius: 0;
}

input {
  outline: none;
}

div#root {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
}

html.good {
  background: linear-gradient(150deg, #6ad6e8, #1968ca);
}

html.soso {
  background: linear-gradient(150deg, #26cda1, #045f80);
  animation: gradient-animation 6s ease infinite;
}

html.bad {
  background: linear-gradient(150deg, #e8af6a, #823310);
}

html.verybad {
  background: linear-gradient(150deg, #ed6262, #580331);
}

